# crux-visualizer

./: .gitignore  .gitmodules
crux-projects/: .gitmodules  Cargo.toml  comprehensive_benchmark_results.json  manifold_learning.csv  routing_data.csv  run_strategy_mix.json  run_strategy_mix_enriched.json  tmp_rovodev_atomic_demo.md  tmp_rovodev_audit_report.md  tmp_rovodev_mind_audit.md
crux-projects/.github/: .gitignore
crux-projects/.github/workflows/: check_atomic_envs_simulation.yml
crux-projects/ai-tinkers-crux-demo/manifold-chat-demo/: Cargo.toml  manifold_learning_v2.csv  routing_data.csv  run_chat_demo.sh
crux-projects/ai-tinkers-crux-demo/release-package/: PACKAGE_OVERVIEW.md  clean_synthesis_prompt.txt  manifold_learning_v2.csv  package_summary.sh  routing_data.csv
crux-projects/configs/: orchestrator_plans.json
crux-projects/crux-cli/: package-lock.json  package.json  tsconfig.json
crux-projects/crux-visualizer/: Cargo.toml  README.md
crux-projects/crux-visualizer/benches/: benchmark.rs
crux-projects/crux-visualizer/tools/: requirements.txt  view_obj.py
