[package]
name = "manifold-chat-demo"
version = "0.1.0"
edition = "2021"
authors = ["Crux AI Research Team"]
description = "Interactive chat demo for Manifold Reasoner v2"
repository = "https://github.com/your-org/crux-core"
license = "MIT"
readme = "README.md"

[workspace]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
anyhow = "1.0"
tracing = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "manifold-chat-demo"
path = "src/main.rs"